some images added to page

--- a/public/kidszone/404-page.html
+++ b/public/kidszone/404-page.html
@@ -205,15 +205,16 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5 sm-margin-30px-bottom">
                         <div class="text-center">
-                            <img src="img/content/error.png" alt="" />
+                            <img src="img/content/pass.png" alt="" />
                         </div>
                     </div>
                     <div class="col-lg-7">
                         <div class="error-box-text text-left padding-70px-left sm-no-padding-left sm-text-center">
                             <h2>404</h2>
-                            <h3>Page not Found</h3>
-                            <h4>We're sorry, Please try one of the following Pages.</h4>
-                            <div class="margin-30px-top"><a href="contact.html" class="butn yellow small"><span>Contact Us</span></a></div>
+                            <h3>Pagina no encontrada</h3>
+                            <h4>Lo sentimos, intente una de las siguientes páginas.</h4>
+                            <div class="margin-30px-top"><a href="contact.html" class="butn yellow small"><span>Contáctanos</span></a></div>
+                            <div class="margin-30px-top"><a href="index.html" class="butn sky small"><span>Volver al inicio</span></a></div>
                         </div>
                     </div>
                 </div>
