--- a/public/kidszone/about.html
+++ b/public/kidszone/about.html
@@ -239,7 +239,7 @@
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 sm-margin-20px-bottom">
                                 <div class="text-center">
-                                    <img src="img/about/about-img-5.jpg" alt="" />
+                                    <img src="img/about/about-img-4.png" alt="" />
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                         <div class="row align-items-center no-gutters sm-margin-40px-bottom">
                             <div class="col-lg-6 sm-margin-20px-bottom">
                                 <div class="text-center">
-                                    <img src="img/about/about-img-4.jpg" alt="" />
+                                    <img src="img/about/about-img-5.png" alt="" />
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -280,7 +280,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 sm-margin-30px-bottom ms-margin-25px-bottom">
                         <div class="teacher-block">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-1.jpg" alt="" />
+                                <img src="img/team/teacher-1.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Henrite Bridg</a></h4>
@@ -292,7 +292,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 sm-margin-30px-bottom ms-margin-25px-bottom">
                         <div class="teacher-block yellow">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-2.jpg" alt="" />
+                                <img src="img/team/teacher-2.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Priscila Baker</a></h4>
@@ -304,7 +304,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 ms-margin-25px-bottom">
                         <div class="teacher-block pink">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-3.jpg" alt="" />
+                                <img src="img/team/teacher-3.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Horothy Hulese</a></h4>
@@ -316,7 +316,7 @@
                     <div class="col-10 col-sm-6 col-lg-3">
                         <div class="teacher-block green">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-4.jpg" alt="" />
+                                <img src="img/team/teacher-4.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Laura Clemen</a></h4>
