--- a/public/kidszone/blog-grid.html
+++ b/public/kidszone/blog-grid.html
@@ -198,7 +198,7 @@
         <!-- end header section -->
 
         <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
+        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/blog/header.png">
             <div class="container">
                 <div class="page-title">
                     <h1>Blog</h1>
@@ -220,7 +220,7 @@
                     <div class="col-lg-4 col-md-6 margin-40px-bottom sm-margin-30px-bottom">
                         <div class="news-block sky">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-1.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">10</span>
                                     <p class="month">Enero</p>
@@ -241,7 +241,7 @@
                     <div class="col-lg-4 col-md-6 margin-40px-bottom sm-margin-30px-bottom">
                         <div class="news-block yellow">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-2.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">21</span>
                                     <p class="month">Enero</p>
@@ -262,7 +262,7 @@
                     <div class="col-lg-4 col-md-6 margin-40px-bottom sm-margin-30px-bottom">
                         <div class="news-block pink">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-3.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">10</span>
                                     <p class="month">Febrero</p>
@@ -283,7 +283,7 @@
                     <div class="col-lg-4 col-md-6 sm-margin-30px-bottom">
                         <div class="news-block green">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-4.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">15</span>
                                     <p class="month">Febrero</p>
@@ -304,7 +304,7 @@
                     <div class="col-lg-4 col-md-6 xs-margin-30px-bottom">
                         <div class="news-block purple">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-5.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">22</span>
                                     <p class="month">Febrero</p>
@@ -325,7 +325,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="news-block orange">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-6.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">25</span>
                                     <p class="month">Febrero</p>
