--- a/public/kidszone/course-details.html
+++ b/public/kidszone/course-details.html
@@ -198,7 +198,7 @@
         <!-- end header section -->
 
         <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
+        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/slider/slide2.png">
             <div class="container">
                 <div class="page-title">
                     <h1>Detalles de Curso</h1>
@@ -349,7 +349,7 @@
                                 </div>
                                 
                                 <div class="widget-sidebar">
-                                    <div class="event-contact bg-img cover-background theme-overlay border-radius-5" data-overlay-dark="9" data-background="img/content/small-banner.jpg">
+                                    <div class="event-contact bg-img cover-background theme-overlay border-radius-5" data-overlay-dark="9" data-background="img/content/contact.png">
                                         <div class="position-relative z-index-9 text-center padding-50px-tb md-padding-40px-tb sm-padding-30px-tb padding-30px-lr">
                                             <i class="fas fa-headset font-size50 md-font-size46 sm-font-size42 text-white margin-15px-bottom"></i>
                                             <h5 class="text-white font-weight-600 margin-5px-bottom">Tienes alguna duda?</h5>
