--- a/public/kidszone/event-grid.html
+++ b/public/kidszone/event-grid.html
@@ -198,7 +198,7 @@
         <!-- end header section -->
 
         <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
+        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/events/header.png">
             <div class="container">
                 <div class="page-title">
                     <h1>Eventos</h1>
@@ -221,7 +221,7 @@
                     <div class="col-lg-6 col-md-12 margin-30px-bottom">
                         <div class="event-block height-100 bg-very-light-gray border-radius-10">
                             <div class="col-left">
-                                <img src="img/events/event-01.jpg" alt="" />
+                                <img src="img/events/1.png" alt="" />
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
@@ -236,7 +236,7 @@
                     <div class="col-lg-6 col-md-12 margin-30px-bottom">
                         <div class="event-block height-100 bg-very-light-gray border-radius-10">
                             <div class="col-left">
-                                <img src="img/events/event-02.jpg" alt="" />
+                                <img src="img/events/2.png" alt="" />
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
@@ -251,7 +251,7 @@
                     <div class="col-lg-6 col-md-12 margin-30px-bottom">
                         <div class="event-block height-100 bg-very-light-gray border-radius-10">
                             <div class="col-left">
-                                <img src="img/events/event-03.jpg" alt="" />
+                                <img src="img/events/3.png" alt="" />
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
@@ -266,7 +266,7 @@
                     <div class="col-lg-6 col-md-12 margin-30px-bottom">
                         <div class="event-block height-100 bg-very-light-gray border-radius-10">
                             <div class="col-left">
-                                <img src="img/events/event-04.jpg" alt="" />
+                                <img src="img/events/4.png" alt="" />
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
@@ -281,7 +281,7 @@
                     <div class="col-lg-6 col-md-12 sm-margin-30px-bottom">
                         <div class="event-block height-100 bg-very-light-gray border-radius-10">
                             <div class="col-left">
-                                <img src="img/events/event-05.jpg" alt="" />
+                                <img src="img/events/5.png" alt="" />
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
@@ -296,7 +296,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="event-block height-100 bg-very-light-gray border-radius-10">
                             <div class="col-left">
-                                <img src="img/events/event-06.jpg" alt="" />
+                                <img src="img/events/6.png" alt="" />
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
@@ -319,7 +319,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
-                            <div class="footer margin-20px-bottom"><img src="img/logos/school-logo.jpg" alt="" class="width-75 sm-width-150px" /></div>
+                            <div class="footer margin-20px-bottom"><img src="img/logos/school-logo.png" alt="" class="width-75 sm-width-150px" /></div>
                             <a href="about.html" class="text-sky font-weight-700">Nosotros<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
                         </div>
 
