--- a/public/kidszone/teacher-details.html
+++ b/public/kidszone/teacher-details.html
@@ -198,7 +198,7 @@
         <!-- end header section -->
 
         <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
+        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/team/header.png">
             <div class="container">
                 <div class="page-title">
                     <h1>Detalles del maestro</h1>
@@ -220,7 +220,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-5 xs-margin-30px-bottom">
                             <div class="team-single-img">
-                                <img src="img/team/teacher-3.jpg" class="border-radius-5" alt="" />
+                                <img src="img/team/teacher-1.png" class="border-radius-5" alt="" />
                             </div>
                         </div>
 
