--- a/public/kidszone/contact.html
+++ b/public/kidszone/contact.html
@@ -198,7 +198,7 @@
         <!-- end header section -->
 
         <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
+        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/contact.png">
             <div class="container">
                 <div class="page-title">
                     <h1>Contáctanos</h1>
