--- a/public/kidszone/courses-grid.html
+++ b/public/kidszone/courses-grid.html
@@ -198,7 +198,7 @@
         <!-- end header section -->
 
         <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
+        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/slider/slide2.png">
             <div class="container">
                 <div class="page-title">
                     <h1>Nuestros Cursos</h1>
@@ -228,7 +228,7 @@
                         <div class="courses-block">
                             <div class="courses-pic">
                                 <a href="course-details.html">
-                                    <img src="img/courses/courses-1.jpg" alt="" />
+                                    <img src="img/courses/deporte.png" alt="" />
                                 </a>
                             </div>
                             <div class="course-desc">
@@ -252,7 +252,7 @@
                         <div class="courses-block yellow">
                             <div class="courses-pic">
                                 <a href="course-details.html">
-                                    <img src="img/courses/courses-2.jpg" alt="" />
+                                    <img src="img/courses/recreacion.png" alt="" />
                                 </a>
                             </div>
                             <div class="course-desc">
@@ -276,7 +276,7 @@
                         <div class="courses-block pink">
                             <div class="courses-pic">
                                 <a href="course-details.html">
-                                    <img src="img/courses/courses-3.jpg" alt="" />
+                                    <img src="img/courses/babygym.png" alt="" />
                                 </a>
                             </div>
                             <div class="course-desc">
@@ -300,7 +300,7 @@
                         <div class="courses-block green">
                             <div class="courses-pic">
                                 <a href="course-details.html">
-                                    <img src="img/courses/courses-6.jpg" alt="" />
+                                    <img src="img/courses/coral.png" alt="" />
                                 </a>
                             </div>
                             <div class="course-desc">
@@ -324,7 +324,7 @@
                         <div class="courses-block orange">
                             <div class="courses-pic">
                                 <a href="course-details.html">
-                                    <img src="img/courses/courses-5.jpg" alt="" />
+                                    <img src="img/courses/tareasdirigidas.png" alt="" />
                                 </a>
                             </div>
                             <div class="course-desc">
@@ -348,7 +348,7 @@
                         <div class="courses-block purple">
                             <div class="courses-pic">
                                 <a href="course-details.html">
-                                    <img src="img/courses/courses-4.jpg" alt="" />
+                                    <img src="img/courses/maternal.png" alt="" />
                                 </a>
                             </div>
                             <div class="course-desc">
@@ -372,7 +372,7 @@
                         <div class="courses-block yellow">
                             <div class="courses-pic">
                                 <a href="course-details.html">
-                                    <img src="img/courses/courses-4.jpg" alt="" />
+                                    <img src="img/courses/maternal.png" alt="" />
                                 </a>
                             </div>
                             <div class="course-desc">
