--- a/public/kidszone/index.html
+++ b/public/kidszone/index.html
@@ -211,7 +211,7 @@
                     <li data-fstransition="fade" data-transition="fade" data-easein="Power4.easeInOut" data-hideslideonmobile="off" data-easeout="Power4.easeInOut" data-slotamount="default" data-masterspeed="default" data-fsslotamount="0" data-saveperformance="off">
 
                         <!-- MAIN IMAGE -->
-                        <img src="img/slider/entrada-frontal.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
+                        <img src="img/slider/slide1.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
 
                         <!-- HERO SUBTITLE -->
                         <div class="tp-caption text-pink alt-font font-weight-700 xs-text-center" data-x="[30,0,0,0]" data-y="[center]" data-voffset="[-180,-150,-150,-120]" data-fontsize="[32,30,32,28]" data-lineheight="34" data-width="[700,650,400,350]" data-whitespace="normal" data-frames='[{
@@ -273,7 +273,7 @@
                     <li data-fstransition="fade" data-transition="fade" data-easein="Power4.easeInOut" data-hideslideonmobile="off" data-easeout="Power4.easeInOut" data-slotamount="default" data-masterspeed="default" data-fsslotamount="0" data-saveperformance="off">
 
                         <!-- MAIN IMAGE -->
-                        <img src="img/slider/slide2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
+                        <img src="img/slider/slide2.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
 
                         <!-- HERO SUBTITLE -->
                         <div class="tp-caption text-pink alt-font font-weight-700 text-center" data-x="center" data-y="[center]" data-voffset="[-180,-150,-150,-120]" data-fontsize="[32,30,32,28]" data-lineheight="34" data-width="[700,650,400,350]" data-whitespace="normal" data-frames='[{
@@ -338,7 +338,7 @@
                         <!--  <div class="opacity-extra-medium bg-black z-index-1"></div> -->
 
                         <!-- MAIN IMAGE -->
-                        <img src="img/slider/slide3.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
+                        <img src="img/slider/slide3.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
 
                         <!-- HERO SUBTITLE -->
                         <div class="tp-caption text-pink alt-font font-weight-700 text-right xs-text-center" data-x="['right','right','right','center']" data-y="[center]" data-voffset="[-180,-150,-150,-120]" data-fontsize="[32,30,32,28]" data-lineheight="34" data-hoffset="['30','30','30','0']" data-width="[700,650,400,350]" data-whitespace="normal" data-frames='[{
@@ -420,7 +420,7 @@
                                 <img src="img/services/2.png" alt="" />
                             </div>
                             <h4><a href="services-details.html">Comida Nutritiva</a></h4>
-                            <p>WBrindamos siempre nuestra mejor solución. Habilidad creativa y actividades divertidas.</p>
+                            <p>Brindamos siempre nuestra mejor solución. Habilidad creativa y actividades divertidas.</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-3 ms-margin-25px-bottom">
@@ -459,7 +459,7 @@
                     <div class="courses-block">
                         <div class="courses-pic">
                             <a href="course-details.html">
-                                <img src="img/courses/courses-1.jpg" alt="" />
+                                <img src="img/courses/deporte.png" alt="" />
                             </a>
                         </div>
                         <div class="course-desc">
@@ -481,7 +481,7 @@
                     <div class="courses-block yellow">
                         <div class="courses-pic">
                             <a href="course-details.html">
-                                <img src="img/courses/courses-2.jpg" alt="" />
+                                <img src="img/courses/recreacion.png" alt="" />
                             </a>
                         </div>
                         <div class="course-desc">
@@ -503,7 +503,7 @@
                     <div class="courses-block pink">
                         <div class="courses-pic">
                             <a href="course-details.html">
-                                <img src="img/courses/courses-3.jpg" alt="" />
+                                <img src="img/courses/babygym.png" alt="" />
                             </a>
                         </div>
                         <div class="course-desc">
@@ -525,7 +525,7 @@
                     <div class="courses-block green">
                         <div class="courses-pic">
                             <a href="course-details.html">
-                                <img src="img/courses/courses-6.jpg" alt="" />
+                                <img src="img/courses/coral.png" alt="" />
                             </a>
                         </div>
                         <div class="course-desc">
@@ -547,7 +547,7 @@
                     <div class="courses-block orange">
                         <div class="courses-pic">
                             <a href="course-details.html">
-                                <img src="img/courses/courses-5.jpg" alt="" />
+                                <img src="img/courses/tareasdirigidas.png" alt="" />
                             </a>
                         </div>
                         <div class="course-desc">
@@ -569,7 +569,7 @@
                     <div class="courses-block green">
                         <div class="courses-pic">
                             <a href="course-details.html">
-                                <img src="img/courses/courses-5.jpg" alt="" />
+                                <img src="img/courses/maternal.png" alt="" />
                             </a>
                         </div>
                         <div class="course-desc">
@@ -591,7 +591,7 @@
                     <div class="courses-block yellow">
                         <div class="courses-pic">
                             <a href="course-details.html">
-                                <img src="img/courses/courses-5.jpg" alt="" />
+                                <img src="img/courses/flamenco.png" alt="" />
                             </a>
                         </div>
                         <div class="course-desc">
@@ -617,7 +617,7 @@
         <!-- end our courses section -->
 
         <!-- start about section -->
-        <section class="parallax no-padding-bottom background-position-center-center" data-background="img/about/about-img-3.jpg">
+        <section class="parallax no-padding-bottom background-position-center-center" data-background="img/slider/slide3.png">
             <div class="container padding-90px-top md-padding-70px-top sm-padding-50px-top xs-padding-15px-top">
 
                 <div class="row">
@@ -739,12 +739,6 @@
         <section class="bg-img cover-background bg-sky theme-overlay" data-overlay-dark="7" data-background="img/bg/pattern-02.png">
             <div class="container margin-5px-top sm-no-margin-top">
 
-                <div class="counter-icons sm-display-none">
-                    <span class="icon icon-one"></span>
-                    <span class="icon icon-three"></span>
-                    <span class="icon icon-five"></span>
-                </div>
-
                 <div class="row">
                     <div class="col-6 col-lg-3 sm-margin-30px-bottom">
                         <div class="counter-block text-center">
@@ -786,7 +780,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 sm-margin-30px-bottom ms-margin-25px-bottom">
                         <div class="teacher-block">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-1.jpg" alt="" />
+                                <img src="img/team/teacher-1.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Henrite Bridg</a></h4>
@@ -798,7 +792,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 sm-margin-30px-bottom ms-margin-25px-bottom">
                         <div class="teacher-block yellow">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-2.jpg" alt="" />
+                                <img src="img/team/teacher-2.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Priscila Baker</a></h4>
@@ -810,7 +804,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 ms-margin-25px-bottom">
                         <div class="teacher-block pink">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-3.jpg" alt="" />
+                                <img src="img/team/teacher-3.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Horothy Hulese</a></h4>
@@ -822,7 +816,7 @@
                     <div class="col-10 col-sm-6 col-lg-3">
                         <div class="teacher-block green">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-4.jpg" alt="" />
+                                <img src="img/team/teacher-4.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Laura Clemen</a></h4>
@@ -850,7 +844,7 @@
 
                         <div class="news-block purple">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-1.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">10</span>
                                     <p class="month">Enero</p>
@@ -874,7 +868,7 @@
 
                         <div class="news-block orange">
                             <div class="news-img">
-                                <a href="blog-post.html"><img src="img/blog/blog-2.jpg" alt="" /></a>
+                                <a href="blog-post.html"><img src="img/blog/new-post.png" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">21</span>
                                     <p class="month">Enero</p>
