--- a/public/kidszone/teachers.html
+++ b/public/kidszone/teachers.html
@@ -198,7 +198,7 @@
         <!-- end header section -->
 
         <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
+        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/team/header.png">
             <div class="container">
                 <div class="page-title">
                     <h1>Maestros</h1>
@@ -224,7 +224,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 sm-margin-30px-bottom ms-margin-25px-bottom">
                         <div class="teacher-block">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-1.jpg" alt="" />
+                                <img src="img/team/teacher-1.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Henrite Bridg</a></h4>
@@ -236,7 +236,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 sm-margin-30px-bottom ms-margin-25px-bottom">
                         <div class="teacher-block yellow">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-2.jpg" alt="" />
+                                <img src="img/team/teacher-2.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Priscila Baker</a></h4>
@@ -248,7 +248,7 @@
                     <div class="col-10 col-sm-6 col-lg-3 ms-margin-25px-bottom">
                         <div class="teacher-block pink">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-3.jpg" alt="" />
+                                <img src="img/team/teacher-3.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Horothy Hulese</a></h4>
@@ -260,7 +260,7 @@
                     <div class="col-10 col-sm-6 col-lg-3">
                         <div class="teacher-block green">
                             <div class="teacher-img">
-                                <img src="img/team/teacher-4.jpg" alt="" />
+                                <img src="img/team/teacher-4.png" alt="" />
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Laura Clemen</a></h4>
